--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body {
     font-family: "Trebuchet MS", sans-serif;
 }
 
-h1, h2 {
+h1, h2, h3 {
     text-align: center;
 }
 
@@ -43,4 +43,15 @@ a {
 p,ul{
     font-size: 11pt;
     text-align: justify;
+}
+
+ul
+{
+    padding-left: 3em;
+    padding-right: 3em;
+}
+
+li
+{
+    padding-bottom: 5px;
 }
